--- a/html两颗吃一颗/index.html
+++ b/html两颗吃一颗/index.html
@@ -2,9 +2,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    
 </head>
 <body style="overflow: hidden;background-color: black;margin: 0;">
-<div style="text-align: center;">
+    <div id="loading" style="display:block;width:100%;height:100%;text-align: center;top:30%;position: relative;"><img src="res/loading.gif" width="30%" height="30%"></div>
+    <div style="text-align: center;">
     <canvas id="mycanvas"
             style="background-image: url('board.svg');background-size: cover;text-align: center "></canvas>
 </div>
@@ -395,6 +397,7 @@
         init()
         paint()
         loadIntArray("compress.bin", function (resp) {
+            document.querySelector("#loading").style.display="none"
             xdata = new Int32Array(resp)
             ydata = new Array(xdata.length)
             for (var i = 0; i < xdata.length; i++) {
