--- a/html两颗吃一颗/index.html
+++ b/html两颗吃一颗/index.html
@@ -5,7 +5,9 @@
     
 </head>
 <body style="overflow: hidden;background-color: black;margin: 0;">
-    <div id="loading" style="display:block;width:100%;height:100%;text-align: center;top:30%;position: relative;"><img src="res/loading.gif" width="30%" height="30%"></div>
+    <div id="loading" style="position:fixed;display:block;width:100%;height:100%;text-align: center;background-color:grey;opacity: 0.7;">
+        <img src="res/loading.gif" width="30%" height="30%" style=" top:20%;position:relative;">
+    </div>
     <div style="text-align: center;">
     <canvas id="mycanvas"
             style="background-image: url('board.svg');background-size: cover;text-align: center "></canvas>
@@ -81,6 +83,7 @@
 
     function paint() {//画图
         mycanvas.width = mycanvas.height = Math.min(window.innerHeight, window.innerWidth)
+        console.log(mycanvas.width+" "+mycanvas.height)
         canvas.clearRect(0, 0, mycanvas.width, mycanvas.height)
         for (var i in a) {
             if (a[i] == 0) continue
