--- a/html两颗吃一颗/index.html
+++ b/html两颗吃一颗/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="overflow: hidden;background-color: black;margin: 0;">
     <div id="loading" style="position:fixed;display:block;width:100%;height:100%;text-align: center;background-color:grey;opacity: 0.7;">
-        <img src="res/loading.gif" width="30%" height="30%" style=" top:20%;position:relative;">
+        <img src="res/loading.gif" style=" top:20%;position:relative;max-width:30%;max-height: 30%">
     </div>
     <div style="text-align: center;">
     <canvas id="mycanvas"
